--- a/src/app/main-wrapper/home/home.component.css
+++ b/src/app/main-wrapper/home/home.component.css
@@ -21,3 +21,10 @@ button {
   margin: 0.25rem;
 }
 
+@media only screen and (max-width: 903px) {
+  .card {
+    margin: 1rem;
+    flex: 100%;
+    max-width: 100%;
+  }
+}
